tests/NormalTests/paczka2/big_fuzzy/46411417.err
Error in line 12: T4kS A396 67,3
Error in line 16: RDA A396 25,0
Error in line 19: RDA S797 24,9
Error in line 8: 1Nm6XyBE A396 97,2
Error in line 25: 1Nm6XyBE S605 31,7
Error in line 34: T4kS S605 68,1
Error in line 49: T4kS S797 80,1
Error in line 54: dD16cCjRI S605 5,4
Error in line 62: T4kS A396 2,6
Error in line 76: wPIxwkm S605 32,4
Error in line 83: dD16cCjRI S797 195,5
Error in line 92: RDA S651 37,2
Error in line 113: A396 S797 72,4
Error in line 117: uNhi8tF S651 42,7
Error in line 132: 1Nm6XyBE S651 45,2
Error in line 136: T4kS A396 51,3
Error in line 140: RDA S797 42,3
Error in line 138: T4kS S797 52,6
Error in line 145: 1Nm6XyBE S797 275,5
Error in line 154: A396 A396 95,6
Error in line 170: uNhi8tF A396 21,3
Error in line 177: 1Nm6XyBE S797 46,5
Error in line 193: T4kS S651 53,9
Error in line 209: wPIxwkm S651 42,03
Error in line 205: dD16cCjRI S651 326,2
Error in line 194: 1Nm6XyBE S651 21,7
Error in line 212: wPIxwkm S651 191,2
Error in line 218: A396 A396 70,7
Error in line 220: A396 S797 80,2
Error in line 216: wPIxwkm A396 65,5
Error in line 231: A396 S651 22,7
Error in line 243: wPIxwkm A396 31,6
Error in line 237: RDA S651 4,8
